fix: 퀴즈 및 일반 게시글 id 값 변경